# churuchuru

./: .gitignore  README.md  constants.js  index.html  requirements.txt  run-server.sh  rxconfig.py
.github/workflows/: publish-marimo.yml  publish_marimo.yml
churuchuru/: churuchuru.py  layout.py
churuchuru/apps/: counter.py  imagetopdf.py  notetaking.py
churuchuru/components/: cleanup.py  colors.py
games/general/tic-tac-toe/: app.js  index.html
homepage/: generate-metadata.sh  index.html  metadata.json  script.js  script.min.js  style.css  style.min.css
python/: README.md  pyproject.toml
python/churuchuru_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/exercises/: lists.py  scratchpad.py  variables_and_types.py
python/exercises/__marimo__/session/: variables_and_types.py.json
