[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churuchuru-python"
version = "0.1.0"
dependencies = [
    "marimo",
    "ruff",
    "ty",
    "pytest",
    "mcp",
    "openai",
    "nbformat",
    "vegafusion",
    "vl-convert-python",
    "altair",
    "duckdb",
    "sqlglot"
]